--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "firebase": "^10.13.0",
     "formik": "^2.4.6",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.3.1",
@@ -20,6 +21,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
